# perestroikabbs

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  ENCODING_ANALYSIS.md  Makefile  PLAN-stdio-mode.md  README  README.md  alembic.ini  config.example.toml  config.production.toml  config.toml  deploy-remote.sh  deploy.sh  docker-compose.external-db.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_all_tests.sh  run_bbs.sh  test-output.txt  test_cp866.py  test_display_modes.py  test_login.py  test_login_debug.py  test_mac_cyrillic.py  test_menu_coverage.py  test_summary.sh  test_template_modes.py  test_utf8_client.py  test_utf8_telnet.py
.github/workflows/: test.yml
bbs/: __init__.py
bbs/app/: encoding.py  exceptions.py  main.py  rip.py  session.py  session_old.py.bak  ssh_gateway.py  stdio_main.py  stdio_transport.py  telnet_server.py
bbs/app/display/: __init__.py  mode.py
bbs/app/i18n/: __init__.py  translator.py  translit.py
bbs/app/security/: auth.py
bbs/app/session/: __init__.py  display.py  io.py  state.py
bbs/app/storage/: container.py  db.py  models.py  repositories.py
bbs/app/templates/: __init__.py  converters.py  engine.py  (+1 more)
deploy/: README.md  deploy.sh
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_drop_terminal_prefs_from_users.py  c3d4e5f6g7h8_drop_language_pref_from_users.py
scripts/: add_language_support.sql  backup.sh  perestroika-bbs.service  restore.sh  seed_demo_data.py
tests/: Dockerfile.test  interactive_test.exp  simple_test.sh  telnet_test.py  test_bbs_integration.py  test_e2e_scenarios.sh  test_full_bbs.py
(+30 files in other folders)
